# calmmage-service-registry

./: Dockerfile  README.md  checklist with claude.md  dashboard.Dockerfile  docker-compose.yml  pyproject.toml  run.py  sample.env
calmmage_services_registry/: dashboard.py  fastapi_app.py  heartbeat.py  service_registry.py  settings.py
dev/: random_ideas.md  todo.md
dev/draft/fastapi_basic_demo/: idea.md  main.py
dev/notes/: examples_todo.md
examples/: async_heartbeat_example.py  dummy_service.py  heartbeat_example.py  multi_behavior_services.py  sample.env
tests/: test_imports.py
