[tool.poetry]
name = "calmmage-services-registry"
version = "0.1.0" # first working dashboard version!
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
calmapp = { git = "https://github.com/calmmage/calmapp.git", branch = "main" }
pytest = "*"
loguru = "*"
toml = "*"
fastapi = "*"
uvicorn = "*"
pymongo = "*"
python-telegram-bot = "*"
pydantic-settings = "*"
pytz = "^2024.1"
humanize = "*"
fastui = "^0.7.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
jupyter-nbextensions-configurator = "*"
jupyter_contrib_nbextensions = "*"
tqdm = "*"
# pandas = "2.1.0"
black = "*"
pre-commit = "*"
aiohttp = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[template]
version = "0.0.3"  # update github workflow
url = "https://github.com/calmmage/python-app-template.git"
author = "Petr Lavrov <petrlavrov@calmmage.com>"
description = "A template for creating an app using calmapp"
